# game-bricks-armi

./: .gitignore  ARCHITECTURE.md  GAME_ENGINE_README.md  INDEX.md  Integrantes. txt  README.md  play.sh  play_snake.sh  play_tetris.sh  produc_spec.md  setup.sh
brickc/: CMakeLists.txt  COMANDOS_TEST.md  INSTRUCCIONES_CMAKE.md
brickc/examples/: pong.brick  snake.brick  tank.brick  tetris.brick
brickc/src/: ast.cpp  ast.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  symbols.cpp  symbols.hpp  util.cpp  util.hpp
brickc/tests/: invalid_syntax.brick  parser_nested.brick
runtime/: CMakeLists.txt
runtime/include/: brick_loader.hpp  game_engine.hpp  input_manager.hpp  menu.hpp  renderer.hpp  snake_game.hpp  tank_game.hpp  tetris_game.hpp
runtime/src/: brick_loader.cpp  game_engine.cpp  input_manager.cpp  main.cpp  main_menu.cpp  main_tetris.cpp  menu.cpp  renderer.cpp  snake_game.cpp  tank_game.cpp  tetris_game.cpp
